--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,14 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
+  
+  mongo:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=pranav
+      - MONGO_INITDB_ROOT_PASSWORD=pass
+    volumes:
+      - mongo-db:/data/db
+
+volumes:
+  mongo-db:
