--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,4 +10,10 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+      - MONGO_USER=pranav
+      - MONGO_PASSWORD=pass
     command: npm run dev
+  mongo:
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=pranav
+      - MONGO_INITDB_ROOT_PASSWORD=pass
