--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,11 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
-  
+    depends_on:
+      - mongo
+
   mongo:
     image: mongo
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=pranav
-      - MONGO_INITDB_ROOT_PASSWORD=pass
     volumes:
       - mongo-db:/data/db
 
